# command-line-rust

01_hello/: Cargo.toml
01_hello/tests/: cli.rs
02_echor/: Cargo.toml
02_echor/src/: main.rs
02_echor/tests/: cli.rs
03_catr/: Cargo.toml
03_catr/src/: lib.rs
04_headr/: Cargo.toml
04_headr/src/: lib.rs  main.rs
05-wcr/: Cargo.toml
05-wcr/src/: lib.rs  main.rs
06-uniqr/src/: lib.rs  main.rs
06-uniqr/tests/: cli.rs
