[package]
name = "catr"
version = "0.1.0"
edition = "2024"
authors = ["Bruno Camargo Ferreira <v3ktoryt@gmail.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
rand = "0.8.5"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
anyhow = "1.0"
